MNIST dataset neural net initial

--- a/Hot and Cold learning.ipynb
+++ b/Hot and Cold learning.ipynb
@@ -174,7 +174,7 @@
     "    pred = input * weight\r\n",
     "    error = (pred - goal_pred) ** 2\r\n",
     "    delta = pred - goal_pred\r\n",
-    "    derivative = 2*delta * input\r\n",
+    "    derivative = delta * input\r\n",
     "\r\n",
     "    weight = weight - derivative*alpha\r\n",
     "    if(iteration%10==0):\r\n",
