deep neural network on MNIST

--- a/MNIST - network from scratch.ipynb
+++ b/MNIST - network from scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 152,
    "source": [
     "from keras.datasets import mnist\r\n",
     "import numpy as np\r\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 153,
    "source": [
     "def w_sum(a,b):\r\n",
     "    assert(len(a) == len(b))\r\n",
@@ -53,25 +53,32 @@
     "def get_probability(labelValue):\r\n",
     "    probs = [0]*10\r\n",
     "    probs[labelValue] = 1\r\n",
-    "    return probs"
+    "    return probs\r\n",
+    "\r\n",
+    "def vector_add(a, b):\r\n",
+    "    out = [0]*len(a)\r\n",
+    "    for i in range(len(a)):\r\n",
+    "        out[i] = a[i]+b[i]\r\n",
+    "    return out"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 154,
    "source": [
     "weights = np.random.random((10, 784))\r\n",
     "weights = list(weights)\r\n",
-    "print(len(weights))"
+    "b = list(np.random.random(10))\r\n",
+    "print(b)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "10\n"
+      "[0.7859590006482449, 0.3886450130345379, 0.29498914484042504, 0.13884486830828313, 0.2840516863966829, 0.29541763816429933, 0.05139701689143317, 0.05897304075286547, 0.18595328386691468, 0.504485111338767]\n"
      ]
     }
    ],
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 158,
    "source": [
     "alpha = 0.01\r\n",
     "for i in range(100):\r\n",
@@ -89,11 +96,10 @@
     "        true = get_probability(labels[i])\r\n",
     "        \r\n",
     "        #do the forward pass\r\n",
-    "        pred = vect_mat_mul(input, weights)\r\n",
-    "        \r\n",
+    "        pred = vector_add(vect_mat_mul(input, weights), b)\r\n",
     "\r\n",
-    "        delta = [0]*10\r\n",
-    "        error = [0]*10\r\n",
+    "        delta = [0.]*10\r\n",
+    "        error = [0.]*10\r\n",
     "\r\n",
     "        for i in range(len(true)):\r\n",
     "            error[i] = (pred[i]-true[i])**2\r\n",
@@ -105,14 +111,17 @@
     "        for i in range(10):\r\n",
     "            for j in range(784):\r\n",
     "                weights[i][j] -= alpha*weight_deltas[i][j]\r\n",
-    "        "
+    "        \r\n",
+    "        for i in range(len(b)):\r\n",
+    "            b[i] -= alpha*delta[i]\r\n",
+    "\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 159,
    "source": [
     "imageId = 7\r\n",
     "image = images[imageId]\r\n",
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 160,
    "source": [
     "trueVals = 0\r\n",
     "\r\n",
@@ -154,7 +163,98 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.946\n"
+      "0.924\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "import sys, numpy as np\r\n",
+    "from keras.datasets import mnist\r\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\r\n",
+    "images, labels = (x_train[0:1000].reshape(1000,28*28)/255, y_train[0:1000])\r\n",
+    "one_hot_labels = np.zeros((len(labels),10))\r\n",
+    "\r\n",
+    "for i,l in enumerate(labels):\r\n",
+    "    one_hot_labels[i][l] = 1\r\n",
+    "labels = one_hot_labels\r\n",
+    "\r\n",
+    "test_images = x_test.reshape(len(x_test),28*28) / 255\r\n",
+    "test_labels = np.zeros((len(y_test),10))\r\n",
+    "for i,l in enumerate(y_test):\r\n",
+    "    test_labels[i][l] = 1\r\n",
+    "\r\n",
+    "np.random.seed(1)\r\n",
+    "relu = lambda x:(x>=0) * x\r\n",
+    "relu2deriv = lambda x: x>=0\r\n",
+    "\r\n",
+    "alpha, iterations, pixels_per_image, num_labels = (0.001, 40, 784, 10)\r\n",
+    "\r\n",
+    "\r\n",
+    "weights_0_1 = 0.2*np.random.random((pixels_per_image,num_labels)) - 0.1\r\n",
+    "\r\n",
+    "\r\n",
+    "for j in range(iterations):\r\n",
+    "    error, correct_cnt = (0.0, 0)\r\n",
+    "    for i in range(len(images)):\r\n",
+    "        layer_0 = images[i:i+1]\r\n",
+    "        layer_1 = np.dot(layer_0,weights_0_1)\r\n",
+    "       \r\n",
+    "        error += np.sum((labels[i:i+1] - layer_1) ** 2)\r\n",
+    "\r\n",
+    "        #To calculate the accuracy\r\n",
+    "        correct_cnt += int(np.argmax(layer_1) == np.argmax(labels[i:i+1]))\r\n",
+    "\r\n",
+    "        layer_1_delta = (labels[i:i+1] - layer_1)\r\n",
+    "\r\n",
+    "        weights_0_1 += alpha * layer_0.T.dot(layer_1_delta)\r\n",
+    "\r\n",
+    "    sys.stdout.write(\"\\r\"+ \\\r\n",
+    "    \" I:\"+str(j)+ \\\r\n",
+    "    \" Error:\" + str(error/float(len(images)))[0:5] +\\\r\n",
+    "    \" Correct:\" + str(correct_cnt/float(len(images))))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " I:39 Error:0.325 Correct:0.925"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "# Testing on Test data\r\n",
+    "\r\n",
+    "if(j % 10 == 0 or j == iterations-1):\r\n",
+    "    error, correct_cnt = (0.0, 0)\r\n",
+    "\r\n",
+    "for i in range(len(test_images)):\r\n",
+    "    layer_0 = test_images[i:i+1]\r\n",
+    "    layer_1 = np.dot(layer_0,weights_0_1)\r\n",
+    "\r\n",
+    "    error += np.sum((test_labels[i:i+1] - layer_1) ** 2)\r\n",
+    "    correct_cnt += int(np.argmax(layer_1) == np.argmax(test_labels[i:i+1]))\r\n",
+    "    \r\n",
+    "sys.stdout.write(\" Test-Err:\" + str(error/float(len(test_images)))[0:5] +\\\r\n",
+    "\" Test-Acc:\" + str(correct_cnt/float(len(test_images))))\r\n",
+    "print()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " Test-Err:0.563 Test-Acc:0.772\n"
      ]
     }
    ],
@@ -171,7 +271,23 @@
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit"
+  },
+  "interpreter": {
+   "hash": "f1058ac39a4b5cc6a2d664bf07a90cc7a0b869b1d28e3e4a0289bda448411850"
   }
  },
  "nbformat": 4,
