--- a/Token prediction Recurrent.ipynb
+++ b/Token prediction Recurrent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "source": [
     "import sys, random, math\r\n",
     "from collections import Counter\r\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "source": [
     "vocab = set()\r\n",
     "for sent in tokens:\r\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
     "np.random.seed(1)\r\n",
     "\r\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "source": [
     "print(vocab)"
    ],
@@ -96,7 +96,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['hallway.', 'moved', 'daniel', 'bathroom', 'travelled', 'the', 'where', 'journeyed', 'kitchen.', 'john', 'to', 'office', 'back', 'bedroom', 'bathroom.', 'mary', 'is', 'daniel?', 'hallway', 'bedroom.', 'kitchen', 'went', 'john?', 'garden', 'mary?', 'sandra', 'sandra?', 'office.', 'garden.']\n"
+      "['sandra?', 'bathroom.', 'to', 'mary', 'hallway.', 'moved', 'garden', 'bedroom.', 'john', 'is', 'journeyed', 'went', 'hallway', 'daniel', 'daniel?', 'mary?', 'garden.', 'where', 'sandra', 'bedroom', 'travelled', 'john?', 'bathroom', 'the', 'office.', 'office', 'back', 'kitchen', 'kitchen.']\n"
      ]
     }
    ],
@@ -104,12 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "source": [
     "def predict(sent):\r\n",
     "    '''\r\n",
     "    sent is a list with token indexes from the vocabulary.\r\n",
-    "    eg [15, 56, 561, 35432, 321, 5468]\r\n",
+    "    eg:- [15, 56, 561, 35432, 321, 5468]\r\n",
     "    '''\r\n",
     "\r\n",
     "    layers = list()\r\n",
@@ -125,18 +125,18 @@
     "    # Running a loop for each token in a sentence\r\n",
     "    for target_i in range(len(sent)):\r\n",
     "        layer = {}\r\n",
-    "\r\n",
-    "        # Predicting which word is going to come up from the vocabulary\r\n",
-    "        layer['pred'] = softmax(layers[-1]['hidden'].dot(decoder))\r\n",
-    "\r\n",
-    "        # From layer[\"pred\"] of dim (len(vocab), 1) get the actual required value vector \r\n",
-    "        # if it is 1 then loss is zero, else we get a value because of log transformation\r\n",
-    "        loss += -np.log(layer['pred'][sent[target_i]])\r\n",
     "        \r\n",
     "        # Similar to ((embeded vector*identity matrix) + next embeded vector) calculation\r\n",
     "        # This part is responsible to keep the sequence factor.\r\n",
-    "        # Check the above image token vector multiplacation.\r\n",
+    "        # Check the below image token vector multiplacation.\r\n",
     "        layer['hidden'] = layers[-1]['hidden'].dot(recurrent) + embed[sent[target_i]]\r\n",
+    "\r\n",
+    "        # Predicting which word is going to come up from the vocabulary (returns (1, len(vocab)) vector)\r\n",
+    "        layer['pred'] = softmax(layers[-1]['hidden'].dot(decoder))\r\n",
+    "\r\n",
+    "        # From layer[\"pred\"] of dim (len(vocab), 1) get the actual required value vector\r\n",
+    "        # if it is 1 then loss is zero, else we get a value because of log transformation\r\n",
+    "        loss += -np.log(layer['pred'][sent[target_i]])\r\n",
     "\r\n",
     "        layers.append(layer)\r\n",
     "        \r\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "source": [
     "for iter in range(30000):\r\n",
     "    alpha = 0.001\r\n",
@@ -186,11 +186,9 @@
     "                # If this is the last layer, then no other derivatives to be add up from recurrent part\r\n",
     "                layer['hidden_delta'] = new_hidden_delta\r\n",
     "            else:\r\n",
-    "                # this is an intermediate layer\r\n",
     "                # So we need to calculate the recurrent derivative from its higher layer\r\n",
-    "                layer['hidden_delta'] = new_hidden_delta + \\\r\n",
-    "                            layers[layer_idx+1]['hidden_delta'].dot(recurrent.transpose())\r\n",
-    "        \r\n",
+    "                layer['hidden_delta'] = new_hidden_delta + layers[layer_idx+1]['hidden_delta'].dot(recurrent.transpose())\r\n",
+    "\r\n",
     "        # If the first layer\r\n",
     "        else: \r\n",
     "            layer['hidden_delta'] = layers[layer_idx+1]['hidden_delta'].dot(recurrent.transpose())\r\n",
@@ -216,36 +214,36 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Perplexity:28.942281525605402\n",
-      "Perplexity:28.925850840833487\n",
-      "Perplexity:28.904242713024555\n",
-      "Perplexity:28.871623793014024\n",
-      "Perplexity:28.818741249448134\n",
-      "Perplexity:28.729289017132416\n",
-      "Perplexity:28.571491359143295\n",
-      "Perplexity:28.274319738835416\n",
-      "Perplexity:27.639781956222553\n",
-      "Perplexity:25.85997851495855\n",
-      "Perplexity:20.71041578929764\n",
-      "Perplexity:18.175655002034116\n",
-      "Perplexity:16.238628070027822\n",
-      "Perplexity:15.15846919321447\n",
-      "Perplexity:14.607433816143516\n",
-      "Perplexity:13.981369537512515\n",
-      "Perplexity:12.778941883352104\n",
-      "Perplexity:10.520162722942732\n",
-      "Perplexity:8.472425345384403\n",
-      "Perplexity:7.6433799370600815\n",
-      "Perplexity:7.291982765285883\n",
-      "Perplexity:7.0498710817537145\n",
-      "Perplexity:6.836422204250653\n",
-      "Perplexity:6.64006635389034\n",
-      "Perplexity:6.459662355419034\n",
-      "Perplexity:6.294923308640655\n",
-      "Perplexity:6.1444986803329265\n",
-      "Perplexity:6.006583422348548\n",
-      "Perplexity:5.876510208041621\n",
-      "Perplexity:5.74833899576789\n"
+      "Perplexity:28.91321137929614\n",
+      "Perplexity:28.87885734561516\n",
+      "Perplexity:28.83392695493964\n",
+      "Perplexity:28.766093148203232\n",
+      "Perplexity:28.655626954084312\n",
+      "Perplexity:28.466625441746253\n",
+      "Perplexity:28.126154884554534\n",
+      "Perplexity:27.46374425206181\n",
+      "Perplexity:25.98831940347549\n",
+      "Perplexity:22.060655133662745\n",
+      "Perplexity:17.879780591425416\n",
+      "Perplexity:15.559868761620836\n",
+      "Perplexity:14.007077789678492\n",
+      "Perplexity:13.290651920540157\n",
+      "Perplexity:12.856605663120146\n",
+      "Perplexity:12.357552448478888\n",
+      "Perplexity:11.63623606085471\n",
+      "Perplexity:10.533524614286977\n",
+      "Perplexity:8.928377581547414\n",
+      "Perplexity:7.189938234298541\n",
+      "Perplexity:6.177569417522595\n",
+      "Perplexity:5.629040455667786\n",
+      "Perplexity:5.217876243207617\n",
+      "Perplexity:4.866188308225435\n",
+      "Perplexity:4.5664227632170284\n",
+      "Perplexity:4.335533204217807\n",
+      "Perplexity:4.188973193195896\n",
+      "Perplexity:4.108886898051218\n",
+      "Perplexity:4.0580026819125345\n",
+      "Perplexity:4.019927855779019\n"
      ]
     }
    ],
@@ -253,14 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "source": [
     "sent_index = 4\r\n",
     "\r\n",
@@ -269,10 +260,12 @@
     "\r\n",
     "for i, each_layer in enumerate(l[1:-1]):\r\n",
     "    input = tokens[sent_index][i]\r\n",
+    "    \r\n",
     "    true = tokens[sent_index][i+1]\r\n",
+    "\r\n",
     "    pred = vocab[each_layer['pred'].argmax()]\r\n",
-    "    print(\"Prev Input:\" + input + (' ' * (12 - len(input))) +\\\r\n",
-    "    \"True:\" + true + (\" \" * (15 - len(true))) + \"Pred:\" + pred)"
+    "\r\n",
+    "    print(\"Prev Input:\" + input + (' ' * (12 - len(input))) + \"True:\" + true + (\" \" * (15 - len(true))) + \"Pred:\" + pred)"
    ],
    "outputs": [
     {
@@ -280,10 +273,10 @@
      "name": "stdout",
      "text": [
       "['sandra', 'moved', 'to', 'the', 'garden.']\n",
-      "Prev Input:sandra      True:moved          Pred:is\n",
+      "Prev Input:sandra      True:moved          Pred:to\n",
       "Prev Input:moved       True:to             Pred:to\n",
-      "Prev Input:to          True:the            Pred:to\n",
-      "Prev Input:the         True:garden.        Pred:the\n"
+      "Prev Input:to          True:the            Pred:the\n",
+      "Prev Input:the         True:garden.        Pred:bedroom.\n"
      ]
     }
    ],
