multiple math functions impl

--- a/DeepLearning Framework.ipynb
+++ b/DeepLearning Framework.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 145,
    "source": [
     "class Tensor (object):\r\n",
     "    def __init__(self,data,\r\n",
@@ -496,8 +496,6 @@
     "                    # This isequivalent to --> layer_1_delta=layer_2_delta.dot(weights_1_2.T) part\r\n",
     "                    new = self.grad.mm(weights.transpose()) \r\n",
     "                    act.backward(new)\r\n",
-    "\r\n",
-    "                    # This is equivalent to --> weight_delta_1_2 = layer_1.T.dot(layer_2_delta) part\r\n",
     "                    new = self.grad.transpose().mm(act).transpose()\r\n",
     "                    weights.backward(new)\r\n",
     "\r\n",
@@ -596,40 +594,121 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "source": [
-    "a = Tensor([1,2,3,4,5], autograd=True)\r\n",
+    "### Now we can compare the original vs framework based implementation of a Neural Network\r\n",
     "\r\n",
-    "a.expand(dim=0, copies=2)"
+    "> ### Regular implementation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "source": [
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = np.array([[0,0],[0,1],[1,0],[1,1]])\r\n",
+    "target = np.array([[0],[1],[0],[1]])\r\n",
+    "\r\n",
+    "weights_0_1 = np.random.rand(2,3)\r\n",
+    "weights_1_2 = np.random.rand(3,1)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    # Forward pass\r\n",
+    "    layer_1 = data.dot(weights_0_1)\r\n",
+    "    layer_2 = layer_1.dot(weights_1_2)\r\n",
+    "\r\n",
+    "    # Loss calculation\r\n",
+    "    diff = (layer_2 - target)\r\n",
+    "    sqdiff = (diff * diff)\r\n",
+    "    loss = sqdiff.sum(0)\r\n",
+    "\r\n",
+    "    # Backpropagation\r\n",
+    "    layer_1_grad = diff.dot(weights_1_2.transpose())\r\n",
+    "    weight_1_2_update = layer_1.transpose().dot(diff)\r\n",
+    "    weight_0_1_update = data.transpose().dot(layer_1_grad)\r\n",
+    "\r\n",
+    "    # Weight Updation\r\n",
+    "    weights_1_2 -= weight_1_2_update * 0.1\r\n",
+    "    weights_0_1 -= weight_0_1_update * 0.1\r\n",
+    "    print(loss[0])"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3, 4, 5],\n",
-       "       [1, 2, 3, 4, 5]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 42
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5.066439994622396\n",
+      "0.4959907791902341\n",
+      "0.4180671892167177\n",
+      "0.35298133007809646\n",
+      "0.2972549636567376\n",
+      "0.24923260381633278\n",
+      "0.20785392075862477\n",
+      "0.17231260916265181\n",
+      "0.14193744536652994\n",
+      "0.11613979792168387\n"
+     ]
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "> ### Framework based implementation"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 165,
+   "source": [
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "w = list()\r\n",
+    "w.append(Tensor(np.random.rand(2,3), autograd=True))\r\n",
+    "w.append(Tensor(np.random.rand(3,1), autograd=True))\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    # Forward pass\r\n",
+    "    pred = data.mm(w[0]).mm(w[1])\r\n",
+    "\r\n",
+    "    # Calculate Loss\r\n",
+    "    loss = ((pred - target)*(pred - target)).sum(0)\r\n",
+    "\r\n",
+    "    # back propagation calculation\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "\r\n",
+    "    # Weight Updation\r\n",
+    "    for w_ in w:\r\n",
+    "        w_.data -= w_.grad.data * 0.1\r\n",
+    "        w_.grad.data *= 0\r\n",
+    "\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.58128304]\n",
+      "[0.48988149]\n",
+      "[0.41375111]\n",
+      "[0.34489412]\n",
+      "[0.28210124]\n",
+      "[0.2254484]\n",
+      "[0.17538853]\n",
+      "[0.1324231]\n",
+      "[0.09682769]\n",
+      "[0.06849361]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
