--- a/DL Framework polished.ipynb
+++ b/DL Framework polished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
@@ -178,6 +178,265 @@
     "    def __str__(self):\r\n",
     "        return str(self.data.__str__())"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Below is a implementation of Stochastic Gradient Descent Class"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "class SGD(object):\r\n",
+    "    def __init__(self, parameters, alpha=0.1):\r\n",
+    "        self.parameters = parameters\r\n",
+    "        self.alpha = alpha\r\n",
+    "\r\n",
+    "    # To Make everything zero/ reset\r\n",
+    "    def zero(self):\r\n",
+    "        for p in self.parameters:\r\n",
+    "            p.grad.data *= 0\r\n",
+    "    \r\n",
+    "    # Gradient Descent Step\r\n",
+    "    def step(self, zero=True):\r\n",
+    "        for p in self.parameters:\r\n",
+    "            p.data -= p.grad.data * self.alpha\r\n",
+    "            if(zero):\r\n",
+    "                p.grad.data *= 0"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "import numpy\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "w = list()\r\n",
+    "w.append(Tensor(np.random.rand(2,3), autograd=True))\r\n",
+    "w.append(Tensor(np.random.rand(3,1), autograd=True))\r\n",
+    "\r\n",
+    "optim = SGD(parameters=w, alpha=0.1)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = data.mm(w[0]).mm(w[1])\r\n",
+    "    loss = ((pred - target)*(pred - target)).sum(0)\r\n",
+    "    \r\n",
+    "    print(loss)\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    optim.step()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.58128304]\n",
+      "[0.48988149]\n",
+      "[0.41375111]\n",
+      "[0.34489412]\n",
+      "[0.28210124]\n",
+      "[0.2254484]\n",
+      "[0.17538853]\n",
+      "[0.1324231]\n",
+      "[0.09682769]\n",
+      "[0.06849361]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### In most DL frameworks Layers are some kind of predefined way of forward propagating data with a high level function like `forward` to do the propagation. Below is a sample implementation of such layer class."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "class Layer(object):\r\n",
+    "    def __init__(self):\r\n",
+    "        self.parameters = list()\r\n",
+    "\r\n",
+    "    def get_parameters(self):\r\n",
+    "        return self.parameters\r\n",
+    "\r\n",
+    "class Linear(Layer):\r\n",
+    "    def __init__(self, n_inputs, n_outputs):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "        # Placeholders for the Weights and Bias parameters in a Linear Layer (Dense layer)\r\n",
+    "        W = np.random.randn(n_inputs, n_outputs)*np.sqrt(2.0/(n_inputs))\r\n",
+    "        self.weight = Tensor(W, autograd=True)\r\n",
+    "        self.bias = Tensor(np.zeros(n_outputs), autograd=True)\r\n",
+    "\r\n",
+    "        self.parameters.append(self.weight)\r\n",
+    "        self.parameters.append(self.bias)\r\n",
+    "\r\n",
+    "    def forward(self, input):\r\n",
+    "        return input.mm(self.weight) + self.bias.expand(0, len(input.data))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "class Sequential(Layer):\r\n",
+    "    def __init__(self, layers=list()):\r\n",
+    "        super().__init__()\r\n",
+    "        self.layers = layers\r\n",
+    "\r\n",
+    "    def add(self, layer):\r\n",
+    "        self.layers.append(layer)\r\n",
+    "    \r\n",
+    "    def forward(self, input):\r\n",
+    "        for layer in self.layers:\r\n",
+    "            input = layer.forward(input)\r\n",
+    "        return input\r\n",
+    "    \r\n",
+    "    def get_parameters(self):\r\n",
+    "        params = list()\r\n",
+    "        for l in self.layers:\r\n",
+    "            params += l.get_parameters()\r\n",
+    "        return params"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Below include a imlpementation of a sequential model using above defined classes."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "model = Sequential([Linear(2,3), Linear(3,1)])\r\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.05)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = model.forward(data)\r\n",
+    "\r\n",
+    "    loss = ((pred - target)*(pred - target)).sum(0)\r\n",
+    "    \r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    optim.step()\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2.6865042]\n",
+      "[11.271212]\n",
+      "[38.09060898]\n",
+      "[9.34796148]\n",
+      "[2.28355956]\n",
+      "[0.93643926]\n",
+      "[0.61224936]\n",
+      "[0.43932735]\n",
+      "[0.32808561]\n",
+      "[0.24902135]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "class MSELoss(Layer):\r\n",
+    "    def __init__(self):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "    def forward(self, pred, target):\r\n",
+    "        return ((pred - target)*(pred - target)).sum(0)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Same as above except, now we use a new class object `MSELoss` to calculate the error between the prediction and target values."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "import numpy\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "model = Sequential([Linear(2,3), Linear(3,1)])\r\n",
+    "\r\n",
+    "criterion = MSELoss()\r\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.05)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = model.forward(data)\r\n",
+    "\r\n",
+    "    # Calculate the error amount\r\n",
+    "    loss = criterion.forward(pred, target)\r\n",
+    "\r\n",
+    "    # Calculate the gradients based on the operations done.\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    \r\n",
+    "    # Backpropagating the loss gradient\r\n",
+    "    optim.step()\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2.33428272]\n",
+      "[0.06743796]\n",
+      "[0.0521849]\n",
+      "[0.04079507]\n",
+      "[0.03184365]\n",
+      "[0.02479336]\n",
+      "[0.01925443]\n",
+      "[0.01491699]\n",
+      "[0.01153118]\n",
+      "[0.00889602]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
